# jh_quant

./: .gitignore  CHANGELOG.md  LICENCE  PORTFOLIO_STRATEGY_REDESIGN_PLAN.md  README.md  SIGNALGATEWAY_ANALYTICS_PLAN.md  SIGNALGATEWAY_CONFIG_STUDIO_PLAN.md  SIGNALGATEWAY_PORTFOLIO_PLAN.md  SIGNALGATEWAY_REFACTOR_PLAN.md  main.py  pyproject.toml  run_paper.py  run_signalgateway.py  run_us_gateway.py  signalgateway_api_validation.ipynb
assets/: dash_video.webm
docs/: SIGNALGATEWAY_RUNSTYLE_TEST_REPORT_ZH.md  SIGNALGATEWAY_SERVICE_INTEGRATION_TESTS.md  backtest.md  dashboard.md  data.md  factors.md  gateway.md  signalgateway.md  signalgateway_jh_live_smoke_result.json  signalgateway_runstyle_smoke_result.json  trading.md
docs/backtest/: index.md  metrics.md  quickstart.md  risk-rules.md  strategies.md
docs/data/: compatibility.md  datatypes.md  get-data.md  index.md  quickstart.md
docs/factors/: calculation.md  exposure.md  factor-models.md  index.md  quickstart.md
docs/trading/: configuration.md  customization.md  index.md  persistence.md  portfolio.md  quickstart.md  service-layer.md  trading-engine.md
jh_quant/backtest/: __init__.py  backtest.py  metrics.py  risk_management.py  rules.py  selectors.py  strategy.py
jh_quant/dashboard/: __init__.py  dash.py
jh_quant/data/: __init__.py  cache_proxy.py  data.py  data_providers.py  data_types.py  service.py  service_manager.py  utils.py
jh_quant/factors/: __init__.py  config.py  main.py
jh_quant/gateway/: __init__.py  market_data.py  oms.py  performance.py  position_sizer.py  signalgateway.py  utils.py
jh_quant/signalgateway/: __init__.py  backtest_engine.py  config.py  market_data.py  (+12 more)
tests/: conftest.py  market_data_test.py
(+142 files in other folders)
